src/objects/Product_Information_Enhanced__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <fields>
        <fullName>Additional_Information__c</fullName>
        <description>CEC</description>
        <label>Additional Information</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Additional_Sensitive_Information__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CEC</description>
        <label>Additional Sensitive Information</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approved_by_Legal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CEC</description>
        <label>Approved by Legal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Availability__c</fullName>
        <description>CEC</description>
        <label>Availability</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Benefit__c</fullName>
        <description>CEC</description>
        <label>Benefit</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <description>CEC</description>
        <label>Brand</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Code_Location__c</fullName>
        <description>CEC</description>
        <label>Date Code Location</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>GTIN_Code_Last_4__c</fullName>
        <description>CEC</description>
        <label>GTIN Code Last 4</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ingredients__c</fullName>
        <description>CEC</description>
        <label>Ingredients</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Legacy_Text__c</fullName>
        <description>CEC</description>
        <label>Legacy Text</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Out_of_Date__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CEC</description>
        <label>Out of Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PDF_Version__c</fullName>
        <description>CEC</description>
        <label>PDF Version</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>Pack_Shot__c</fullName>
        <description>CEC</description>
        <label>Pack Shot</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Packaging_Description__c</fullName>
        <description>CEC</description>
        <label>Packaging Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <description>CEC</description>
        <label>Product Code</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Colour__c</fullName>
        <description>CEC</description>
        <label>Product Colour</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <label>Product Description</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Recycling_Info__c</fullName>
        <description>CEC</description>
        <label>Recycling Info</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Sensitive_Text__c</fullName>
        <description>CEC</description>
        <label>Sensitive Text</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Shelf_Life__c</fullName>
        <label>Shelf Life</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Size__c</fullName>
        <label>Size</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Storage__c</fullName>
        <description>CEC</description>
        <label>Storage</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Suitability__c</fullName>
        <description>CEC</description>
        <label>Suitability</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Usage__c</fullName>
        <description>CEC</description>
        <label>Usage</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Variant__c</fullName>
        <description>CEC</description>
        <label>Variant</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Product Information Enhanced</label>
    <pluralLabel>Product Information Enhanced</pluralLabel>
</CustomObject>